[package]
name = "serde-cw-value"
version = "0.7.0"
authors = ["arcmx", "Bartłomiej Kuras"]
edition = "2018"

description = "Serialization value trees for CosmWasm"
repository = "https://github.com/hashedone/serde-cw-value"
readme = "README.md"
keywords = ["serde", "wasm"]
license = "MIT"

[dependencies.serde]
version = "1.0"
default-features = false
features = ["alloc"]

[dev-dependencies]
serde_derive = "^1.0.0"
